# s-rack

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  index.html  nginx.conf
.github/workflows/: docker-image.yml  rust.yml
helm/: Chart.yaml  values.yaml
helm/templates/: cert.yaml  ingress.yaml  nginx.yaml
src/: main.rs  synth.rs  ui.rs
src/synth/: adsr.rs  filter.rs  freeverb.rs  math.rs  mixer.rs  oscillator.rs  output.rs  sample.rs  sequencer.rs  vca.rs
wix/: main.wxs
